--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "helix-script",
   "displayName": "HELIX Script",
   "description": "helix",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "publisher": "HELIXCreator",
+  "icon": "favicon.ico",
   "engines": {
     "vscode": "^1.83.0"
   },
