feat: add pipeline

--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "helix-script",
   "displayName": "HELIX Script",
-  "description": "helix",
-  "version": "1.0.0",
-  "publisher": "HELIXCreator",
+  "description": "A simple tool for Scripter",
+  "version": "1.0.1",
+  "publisher": "helix",
+  "repository": "https://github.com/hypersonic-laboratories/vscode-plugin",
   "icon": "favicon.ico",
   "engines": {
     "vscode": "^1.83.0"
@@ -44,10 +45,10 @@
     ]
   },
   "scripts": {
-    "vscode:prepublish": "pnpm run compile",
+    "vscode:prepublish": "npm run compile",
     "compile": "tsc -p ./",
     "watch": "tsc -watch -p ./",
-    "pretest": "pnpm run compile && pnpm run lint",
+    "pretest": "npm run compile && npm run lint",
     "lint": "eslint src --ext ts",
     "test": "node ./out/test/runTest.js"
   },
